インデックス化データ一覧のダウンロード機能を追加し、処理完了後にファイルパスをデータベースに記録。古いインデックスファイルを自動削除する機能を実装。アップロード履歴画面にダウンロードボタンを追加し、UIを改善。

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -26,7 +26,7 @@
                     pattern="[a-zA-Z0-9._%+-]+@gmail\.com"
                     title="@gmail.comのメールアドレスを入力してください"
                 >
-                <small class="form-hint">@gmail.comドメインのみ許可</small>
+                <small class="form-hint"></small>
             </div>
 
             <div class="form-group">
@@ -40,7 +40,7 @@
                     pattern="[a-zA-Z0-9._%+-]+@gmail\.com"
                     title="@gmail.comのメールアドレスを入力してください"
                 >
-                <small class="form-hint">@gmail.comドメインのみ許可</small>
+                <small class="form-hint"></small>
             </div>
 
             <div class="form-group">
