--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -282,6 +282,26 @@ h3 {
     font-size: 0.875rem;
 }
 
+.btn-download {
+    background-color: #10b981;
+    color: white;
+}
+
+.btn-download:hover {
+    background-color: #059669;
+}
+
+.btn-disabled {
+    background-color: #d1d5db;
+    color: #9ca3af;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+.btn-disabled:hover {
+    background-color: #d1d5db;
+}
+
 .form-actions {
     margin-top: 2rem;
     display: flex;
